fix misalignment

--- a/hub_v2/style.css
+++ b/hub_v2/style.css
@@ -685,7 +685,7 @@ textarea {
 
 .node-input .time {
     display:inline-block;
-    width:60px;
+    width:80px;
     padding-top:10px;
     text-align:center;
 }
